# Dress_e-commerce

./: .gitignore  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
cart/: cart.py  context_processor.py  urls.py  views.py
cart/templatetags/: custom_tags.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_variantproduct_sale.py  0003_alter_variantproduct_sale.py  0004_alter_variantproduct_image_1_and_more.py  0005_alter_variantproduct_stock.py
e_commerce_site/: asgi.py  settings.py  urls.py  wsgi.py
payment/: admin.py  forms.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_order_razorpay_order_id_alter_order_payment_id_and_more.py  0003_orderitem_product_name.py  0004_alter_order_status.py  0005_orderitem_is_stitched.py
static/: product_details.css
staticfiles/: product_details.css
templates/: admin_order.html  base.html  cart.html  category.html  checkout-payment.html  checkout.html  index.html  order_details.html  payment_verify.html  product.html  product_details.html
templates/account/: login.html  signup.html
templates/details_page/: Terms_Conditions.html  cancel_refund.html  contact.html  privacy_policy.html  shipping_policy.html
templates/includes/: nav.html
