[project]
name = "e-commerce-site"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "django>=5.2.8",
    "django-allauth>=65.13.0",
    "django-widget-tweaks>=1.5.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
]
