[project]
name = "e-commerce-site"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "dj-database-url>=3.0.1",
    "django>=5.2.8",
    "django-allauth>=65.13.0",
    "django-widget-tweaks>=1.5.0",
    "mysqlclient>=2.2.7",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "razorpay>=2.0.0",
    "requests>=2.32.5",
]
